wp-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: workprofile
  name: workprofile
spec:
  replicas: 1
  selector:
    matchLabels:
      app: workprofile
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: workprofile
    spec:
      containers:
      - image: 585008052747.dkr.ecr.ap-south-1.amazonaws.com/dev/workprofile:latest
        name: workprofile
        ports:
        - containerPort: 8080
        resources: {}
status: {}
