ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: workprofile-ingress
  namespace: workprofile
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: workprofile
                port:
                  number: 8080
            path: /
